# CUDA-SHA256-SHA3

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
CHANGES/: 0001-initial-implementation.md  0002-repo-hygiene.md
demo/: demo.cpp
docs/: 00_overview.md  01_sha256_internals.md  02_sha3_keccak_internals.md  03_batched_gpu_design.md  04_cuda_performance.md  05_build_and_run.md  06_study_guide.md
include/: sha256.h  sha3.h  sha_common.h  sha_cpu_reference.h  sha_cuda.cuh
msvc/: SHA_CUDA.sln  SHA_Demo.vcxproj  SHA_Demo.vcxproj.filters  SHA_Tests.vcxproj  SHA_Tests.vcxproj.filters
scripts/: build.bat  build.ps1
src/: sha256_gpu.cu  sha3_gpu.cu  sha_cpu_reference.cpp
tests/: test_vectors.cpp
